fix(tooltips): add visibility hidden to tooltip container as well

--- a/frontend/src/css/menu/hotbar.css
+++ b/frontend/src/css/menu/hotbar.css
@@ -106,6 +106,7 @@
   height: 100%;
 
   display: flex;
+  visibility: hidden;
   flex-direction: column;
   justify-content: space-around;
 
